# affordabot

./: .agent-mail-project-id  .gitattributes  .gitignore  .gitmodules  AGENTS.local.md  AGENTS.md  IMPLEMENTATION_COMPLETE.md  Makefile  QA_TRIGGER.md  RAILWAY_ENV.md  README.md  inspect_db_state.py  opencode.jsonc  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pr_info.json  pr_url.txt  railway.toml  review_overlap.md  review_prompts.md  review_wave_plan.md  sessions.txt  temp_playwright_test.ts  verify_status.py
backend/: get_latest_run_id.py  git-askpass.sh  llm_common  main.py  nixpacks.toml  pyproject.toml  railway.toml  raw_probe_response.json  requirements.txt  seed_admin.py  test_admin_endpoints.sh
backend/agents/: policy_agent.py
backend/artifacts/: oss_pipeline_hardening_and_saratoga_eval.md  poc_rag_pipeline_oss_swap_report.md  poc_rag_pipeline_oss_swap_saratoga_mock.md  poc_two_vps_search_rate_report.md  poc_vs_current_zai_rag_pipeline.md  single_jurisdiction_oss_eval_report.json  single_jurisdiction_oss_eval_report.md
backend/auth/: clerk.py
backend/clients/: web_reader_client.py  zai_layout_parsing_client.py
backend/contracts/: ingestion.py  storage.py
backend/db/: postgres_client.py  schema.sql  supabase_client.py
backend/flows/: orchestration.py  scraping_flow.py  template_review_flow.py
backend/llm_common/: __init__.py  cost_tracker.py  exceptions.py  web_search.py
backend/middleware/: auth.py  rate_limit.py
backend/migrations/: 002_schema_recovery_v2.sql  003_create_pipeline_steps.sql  004_fix_legislation_schema.sql  005_fix_p0_schema_drift.sql  006_add_impact_sufficiency_columns.sql  006_add_trigger_source.sql  006_fix_advisor_schema_drift.sql  007_add_revision_identity_columns.sql  008_add_discovery_resilience_caches.sql  008_add_pipeline_domain_storage_state.sql  009_add_discovery_deferred_queue.sql  009_add_policy_evidence_package_storage.sql
backend/routers/: __init__.py  admin.py  bills.py  chat.py  discovery.py  prompts.py  sources.py
backend/schemas/: analysis.py  economic_evidence.py  policy_evidence_package.py  prompt.py
backend/scripts/: apply_migration_fix.py  check_documents_schema.py  check_env.py  check_sanjose_data.py  db_inspect.py  diagnose_zai.py  get_latest_run.py  inspect_schema.py  reload_schema.py  rerun_california_bills.py  run_migration_004.py  seed_prompts.py  test_db_write.py  test_import.py
backend/services/: alerting.py  auto_discovery_service.py  economic_assumptions.py  glass_box.py  ingestion_service.py  legislation_research.py  pdf_markdown.py  persisted_pipeline.py  persisted_pipeline_poc.py  revision_identity.py  search_pipeline_service.py  slack_summary.py  source_service.py  substrate_promotion.py  template_review_service.py  vector_backend_factory.py
backend/tests/: TEST_PLAN.md  conftest.py  test_agentic_pipeline.py  test_audit_trail.py  test_compare_web_research_modes.py  test_cron_endpoints.py  test_db_client.py  test_db_inspect.py  test_discovery.py  test_discovery_services.py  test_embedding_dimension_contract.py  test_evaluate_promotion_candidates.py  test_expand_legistar_source_inventory.py  test_grounded_validation_sweep.py  test_health.py  test_ingestion_service.py  test_integration_flows.py  test_manual_capture_substrate.py  test_manual_expansion_runner.py  test_orchestrator_persistence.py  test_pdf_markdown.py  test_persisted_pipeline_poc_endpoints.py  test_postgres_client.py  test_retrieval_quality_verification.py  test_revision_identity.py  test_run_golden_suite.py  test_search_pipeline_service.py  test_source_service.py  test_substrate_inspection.py  test_substrate_promotion.py  (+4 more)
(+1209 files in other folders)
